Fixing logo not showing up

--- a/_sass/header/_masthead.scss
+++ b/_sass/header/_masthead.scss
@@ -47,14 +47,6 @@
     }
 }
 
-.navbar-brand {
-    background: url("/assets/images/logo-white.svg");
-}
-
-.navbar-brand:hover {
-    background: url("/assets/images/logo-white.svg");
-}
-
 /** Children Menu */
 
 nav ul {
